# open-license-manager

./: CMakeLists.txt
example/: CMakeLists.txt
src/: CMakeLists.txt  build_properties.h.in
src/tools/: CMakeLists.txt
src/tools/base_lib/: CMakeLists.txt
src/tools/bootstrap/: CMakeLists.txt  bootstrap.cpp
src/tools/license-generator/: CMakeLists.txt  license-generator-main.cpp
